--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#"><img src="image/LOGO.png" alt="Rapha"></a>
+            <a href="#"><img src="image/logo.png" alt="Rapha"></a>
         </div>
         <a href="https://forms.gle/K4Mg8oVG3uVCEdGX9" class="order_btn">Order</a>
         <a href="https://forms.gle/K4Mg8oVG3uVCEdGX9" class="placeOrder_btn">Place an Order</a>
@@ -99,7 +99,7 @@
 
     <div class="upload mob card1" >
         <div class="forHover">
-            <img src="image/Prescription.png" alt="prescription" style="  -webkit-transform: scaleX(-1); transform: scaleX(-1)" class="card_img prescription_img">
+            <img src="image/prescription.png" alt="prescription" style="  -webkit-transform: scaleX(-1); transform: scaleX(-1)" class="card_img prescription_img">
         </div>
         <div>
             <p class="t2">Why are you still waiting?</p>
