--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="footer">
         <h1 class="fText">RAPHA Medicals</h2>
         <p class="f2Text">Munchief Court Rd, Tirumangalam, Tamil Nadu - 625706</p>
-        <p class="f2Text">Phone: 9488512461 </p>
+        <p class="f2Text">Phone: +91 9488 512 461</p>
     <a href="https://goo.gl/maps/CmTSDk1hucuhNFQd7" target="_blank" >
        
         <p class="f2Text">Click here for directions</p>
