--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="https://cdni.iconscout.com/illustration/premium/thumb/delivery-boy-2996656-2500688.png" alt="Free devivery" class="card_img">
         </div>
         <div>
-            <p class="t2">We'll be happy bring your</p>
+            <p class="t2">We'll be happy to bring your</p>
             <p class="t1">Medicines to your doorstep</p>
             <p class="t2">without any aditional charges*</p>
         </div>
