--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="title mob">
         <h2>Welcome to</h2>
         <h1>Generic Aadhaar</h1>
-        <h3>India's fastest growing Pharma company</h3>
+        <p class="t2">India's fastest growing Pharma company</p>
     </div>
 
 
@@ -91,7 +91,7 @@
         <div>
             <p class="t2">We'll be happy to bring your</p>
             <p class="t1">Medicines to your doorstep</p>
-            <p class="t2">without any aditional charges*</p>
+            <p class="t2">without any additional charges*</p>
         </div>
     </div>   
 
@@ -102,8 +102,8 @@
             <img src="image/prescription.png" alt="prescription" style="  -webkit-transform: scaleX(-1); transform: scaleX(-1)" class="card_img prescription_img">
         </div>
         <div>
-            <p class="t2">Why are you still waiting?</p>
-            <p class="t1">Upload your prescription</p>
+            <p class="t2">what are you waiting for?</p>
+            <p class="t1">Upload your prescription now</p>
             <p class="t2">And place your order</p>
         </div>
     </div> 
