--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
             Upload Prescription
         </a>
     </div>
+    
+    <div class="upload-btn">
+        <a href="products.html" target="_blank" class="Upload_btn">
+            second page
+        </a>
+    </div>
+
 
 <!-- Footer------------------------------------------------- -->
 
