--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <a href="https://forms.gle/K4Mg8oVG3uVCEdGX9" target="_blank" class="placeOrder_btn">Place an Order</a>
     </header>
 
-    <img src="https://genericaadhaar.com/staticfile/images/Front-Banner--new.jpg" alt="genericaadhaar" class="first">
+    <!-- <img src="https://genericaadhaar.com/staticfile/images/Front-Banner--new.jpg" alt="genericaadhaar" class="first"> -->
+
+    <img src="image/homeBanner.png" alt="genericaadhaar" class="first">
+
 
     <div class="title mob">
         <h2>Welcome to</h2>
@@ -116,13 +119,6 @@
             Upload Prescription
         </a>
     </div>
-    
-    <div class="upload-btn">
-        <a href="products.html" target="_blank" class="Upload_btn">
-            second page
-        </a>
-    </div>
-
 
 <!-- Footer------------------------------------------------- -->
 
