--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- <img src="https://genericaadhaar.com/staticfile/images/Front-Banner--new.jpg" alt="genericaadhaar" class="first"> -->
 
-    <img src="image/homeBanner.png" alt="genericaadhaar" class="first">
+    <img src="image/home.png" alt="genericaadhaar" class="first">
 
 
     <div class="title mob">
