--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!-- Location Card------------------------------------------------- -->
    
 <div class="location mob card2">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d982.8222540126745!2d77.98169782918521!3d9.826075520992033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00d3537976a91d%3A0x30532b1ac02c12ac!2sGeneric%20Aadhaar-Rapha%20medicals!5e0!3m2!1sen!2sin!4v1678814444924!5m2!1sen!2sin" width="400" height="200" style="border:0; margin: 20px 30px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d982.8222540126745!2d77.98169782918521!3d9.826075520992033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00d3537976a91d%3A0x30532b1ac02c12ac!2sGeneric%20Aadhaar-Rapha%20medicals!5e0!3m2!1sen!2sin!4v1678814444924!5m2!1sen!2sin" class="map-iframe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
     <a href="https://goo.gl/maps/Ti3zBtc9VQFvSwwq7" target="_blank" >
         <p class="t1">Now at Thirumangalam</p>
