--- a/form.html
+++ b/form.html
@@ -75,14 +75,14 @@
 
             <div class="fMail fgroup">
                 <label for="mail">Email<span class="red">*</span></label>
-                <input type="email" name="email" id="mail" placeholder="Enter your email here">
+                <input type="email" name="email" id="mail" placeholder="Enter your email here" required>
             </div>
 
             <!-- Phone--------------------------------------- -->
 
             <div class="fPhone fgroup">
                 <label for="phone">Phone<span class="red">*</span></label>
-                <input type="number" name="phone" id="phone" placeholder="Enter your Phone number here">
+                <input type="number" name="phone" id="phone" placeholder="Enter your Phone number here" required>
             </div>
 
             <!-- Address--------------------------------------- -->
